<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment_Register">

    <ImageView
        android:id="@+id/LOGIN_IMG_iconApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_logo_s"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/edtName"
        android:singleLine="true"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_above="@+id/edtEmail"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edtEmail"
        android:singleLine="true"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/email" />


    <EditText
        android:id="@+id/edtPass"
        android:singleLine="true"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edtEmail"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/register" />
</RelativeLayout>