<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment_Welcome">

    <TextView
        android:id="@+id/welcome_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_LBL_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="לספרייה החברתית"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/LOGIN_IMG_iconApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_s"
        android:layout_below="@+id/lbl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@+id/txtExplanation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/signin"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txtExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/dont_have_account"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/signup"
        android:textSize="25sp" />
</RelativeLayout>